<resources>
    <string name="app_name">gaming</string>

    <string name="name">Nom</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="sign_up_title">S\'inscrire</string>
    <string name="signUpTitle">Connexion</string>
    <string name="sign_up">Se connecter</string>
    <string name="create_account">S\'inscrire</string>

    <string name="no_account">Creer un compte</string>
    <string name="already_member">Déja inscrit ?</string>
    <string name="connexion_avec_google">Se connceter avec Google?</string>


</resources>